[metadata]
description = m68k cpu emulation, using the Musashi C library
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/ksim68k
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = cpu, emulation, m68k, 68000
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Emulators


[pycodestyle]
max-line-length = 120
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build,build_ffi_module.py
